added project images and links

--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
                                     |
                                 </span>
                             </span>
+                            <span class="center-align button" data-filter=".back-end">
+                                BACK END
+                                <span class="projects-slashes">
+                                    |
+                                </span>
+                            </span>
                             <span class="center-align button" data-filter=".full-stack">
                                 FULL STACK
                             </span>
@@ -256,111 +262,123 @@
                     <div class="row" data-aos="zoom-in" data-aos-delay="650" data-aos-duration="1000"
                     data-aos-once="true">
 
-                        <!-- PROJECT -->
+                        <!-- DO4U -->
                         <div class="grid">
-                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
-                                <div class="card">
-                                    <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
-                                    </div>
-                                    <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                                            <p><a href="#">This is a link</a></p>
-                                        </div> -->
-                                    <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- PROJECT -->
-                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
-                                <div class="card">
-                                    <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
-                                    </div>
-                                    <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                                            <p><a href="#">This is a link</a></p>
-                                        </div> -->
-                                    <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- PROJECT -->
-                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
-                                <div class="card">
-                                    <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
-                                    </div>
-                                    <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                                            <p><a href="#">This is a link</a></p>
-                                        </div> -->
-                                    <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- PROJECT -->
-                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
-                                <div class="card">
-                                    <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
-                                    </div>
-                                    <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-                                            <p><a href="#">This is a link</a></p>
-                                        </div> -->
-                                    <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- PROJECT -->
                             <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
+                                        <img class="activator project-img" src="assets/images/do4u.png"
+                                        height="200px" width="200px">
                                     </div>
                                     <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
                                             <p><a href="#">This is a link</a></p>
                                         </div> -->
                                     <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
+                                        <span class="card-title">DO4U<i class="material-icons right">close</i></span>
+                                        <p class="project-info">React.js, MongoDB & User Authentication</p>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/do-4-u" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://do-4-u.herokuapp.com/" target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- PROJECT -->
+                            <!-- Focus! -->
                             <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator" src="assets/images/roulette.jpg">
+                                        <img class="activator project-img" src="assets/images/focus.png"
+                                        height="200px" width="200px">
                                     </div>
                                     <!-- <div class="card-content">
-                                            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
                                             <p><a href="#">This is a link</a></p>
                                         </div> -->
                                     <div class="card-reveal">
-                                        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                                        <p>Here is some more information about this product that is only revealed once
-                                            clicked on.</p>
+                                        <span class="card-title">Focus!<i class="material-icons right">close</i></span>
+                                        <p class="project-info">Handlebars.js, Express.js & User Authentication</p>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/Focus" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://limitless-basin-61713.herokuapp.com/" target="_blank">Deployed</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Restaurant Roulette -->
+                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator project-img" src="assets/images/restaurant.png"
+                                        height="200px" width="200px">
+                                    </div>
+                                    <!-- <div class="card-content">
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <p><a href="#">This is a link</a></p>
+                                        </div> -->
+                                    <div class="card-reveal">
+                                        <span class="card-title">Restaurant Roulette<i class="material-icons right">close</i></span>
+                                        <p class="project-info">JQuery, API & Responsive Design</p>
+                                        <a class="project-link center-align col s6" href="https://github.com/wheresdylan/project_one" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://wheresdylan.github.io/project_one/" target="_blank">Deployed</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- React Mario -->
+                            <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator project-img" src="assets/images/react-mario.png"
+                                        height="200px" width="200px">
+                                    </div>
+                                    <!-- <div class="card-content">
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <p><a href="#">This is a link</a></p>
+                                        </div> -->
+                                    <div class="card-reveal">
+                                        <span class="card-title">Memory Game<i class="material-icons right">close</i></span>
+                                        <p class="project-info">React.js & Bootstrap</p>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/React-Clicky-Game" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://mtvickery1.github.io/React-Clicky-Game/" target="_blank">Deployed</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Eat Da Burger -->
+                            <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator project-img" src="assets/images/burger.png"
+                                        height="200px" width="200px">
+                                    </div>
+                                    <!-- <div class="card-content">
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <p><a href="#">This is a link</a></p>
+                                        </div> -->
+                                    <div class="card-reveal">
+                                        <span class="card-title">Eat Da Burger<i class="material-icons right">close</i></span>
+                                        <p class="project-info">SQL, Handlebars.js & Express.js</p>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/burger" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://fast-hollows-29460.herokuapp.com/" target="_blank">Deployed</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Bamazon -->
+                            <div class="col s12 m6 l4 element-item back-end" data-category="back-end">
+                                <div class="card">
+                                    <div class="card-image waves-effect waves-block waves-light">
+                                        <img class="activator project-img" src="assets/images/bamazon.png"
+                                        height="200px" width="200px">
+                                    </div>
+                                    <!-- <div class="card-content">
+                                            <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+                                            <p><a href="#">This is a link</a></p>
+                                        </div> -->
+                                    <div class="card-reveal row">
+                                        <span class="card-title">Bamazon<i class="material-icons right">close</i></span>
+                                        <p class="project-info">Node.js & SQL</p>
+                                        <a class="project-link center-align col s12" href="https://github.com/mtvickery1/bamazon" target="_blank">GitHub</a>
+                                        <!-- <a class="project-link center-align col s6" href="#" target="_blank">Deployed</a> -->
                                     </div>
                                 </div>
                             </div>
