fixed nav overflow

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </a>
 
             <!-- Logo -->
-            <a href="#" class="brand-logo">Mason Vickery</a>
+            <a href="#" class="brand-logo no-wrap">Mason Vickery</a>
 
             <!-- Nav Buttons -->
             <ul class="right hide-on-med-and-down">
@@ -118,7 +118,7 @@
 
                 <!-- Col -->
                 <div class="col s12">
-                    <p class="big-text padding no-wrap ">
+                    <p class="big-text padding no-wrap">
                         MASON VICKERY
                     </p>
                 </div>
@@ -277,6 +277,7 @@
                                     <div class="card-reveal">
                                         <span class="card-title">DO4U<i class="material-icons right">close</i></span>
                                         <p class="project-info">React.js, MongoDB & User Authentication</p>
+                                        <br>
                                         <a class="project-link center-align col s6" href="https://github.com/mtvickery1/do-4-u" target="_blank">GitHub</a>
                                         <a class="project-link center-align col s6" href="https://do-4-u.herokuapp.com/" target="_blank">Deployed</a>
                                     </div>
@@ -297,6 +298,7 @@
                                     <div class="card-reveal">
                                         <span class="card-title">Focus!<i class="material-icons right">close</i></span>
                                         <p class="project-info">Handlebars.js, Express.js & User Authentication</p>
+                                        <br>
                                         <a class="project-link center-align col s6" href="https://github.com/mtvickery1/Focus" target="_blank">GitHub</a>
                                         <a class="project-link center-align col s6" href="https://limitless-basin-61713.herokuapp.com/" target="_blank">Deployed</a>
                                     </div>
@@ -317,6 +319,7 @@
                                     <div class="card-reveal">
                                         <span class="card-title">Restaurant Roulette<i class="material-icons right">close</i></span>
                                         <p class="project-info">JQuery, API & Responsive Design</p>
+                                        <br>
                                         <a class="project-link center-align col s6" href="https://github.com/wheresdylan/project_one" target="_blank">GitHub</a>
                                         <a class="project-link center-align col s6" href="https://wheresdylan.github.io/project_one/" target="_blank">Deployed</a>
                                     </div>
@@ -337,6 +340,7 @@
                                     <div class="card-reveal">
                                         <span class="card-title">Memory Game<i class="material-icons right">close</i></span>
                                         <p class="project-info">React.js & Bootstrap</p>
+                                        <br>
                                         <a class="project-link center-align col s6" href="https://github.com/mtvickery1/React-Clicky-Game" target="_blank">GitHub</a>
                                         <a class="project-link center-align col s6" href="https://mtvickery1.github.io/React-Clicky-Game/" target="_blank">Deployed</a>
                                     </div>
@@ -357,6 +361,7 @@
                                     <div class="card-reveal">
                                         <span class="card-title">Eat Da Burger<i class="material-icons right">close</i></span>
                                         <p class="project-info">SQL, Handlebars.js & Express.js</p>
+                                        <br>
                                         <a class="project-link center-align col s6" href="https://github.com/mtvickery1/burger" target="_blank">GitHub</a>
                                         <a class="project-link center-align col s6" href="https://fast-hollows-29460.herokuapp.com/" target="_blank">Deployed</a>
                                     </div>
@@ -377,6 +382,7 @@
                                     <div class="card-reveal row">
                                         <span class="card-title">Bamazon<i class="material-icons right">close</i></span>
                                         <p class="project-info">Node.js & SQL</p>
+                                        <br>
                                         <a class="project-link center-align col s12" href="https://github.com/mtvickery1/bamazon" target="_blank">GitHub</a>
                                         <!-- <a class="project-link center-align col s6" href="#" target="_blank">Deployed</a> -->
                                     </div>
