updated about section

--- a/index.html
+++ b/index.html
@@ -159,18 +159,26 @@
                 <div class="row" data-aos="zoom-in" data-aos-delay="350" data-aos-duration="1000" data-aos-once="true">
 
                     <!-- Col -->
-                    <h5 class="center-align col s12">
-                        I am a Full-Stack Web Developer who loves creating clean and responsive UI with animations
-                        that
-                        bring applications to life.
+                    <div class="center-align col s12 m4">
+                        <img id="about-pic" class="responsive-img" src="assets/images/perderales.jpg" height="300" width="300">
+                    </div>
+
+                    <!-- Col -->
+                    <h5 id="about-text" class="col s12 m8">
+                        I am a full stack web developer from Austin, Texas. I have always had a passion for logic, efficiency, and problem solving, which ultimately led me to pursue a path in web development.
+                        <br><br>
+                        My interest in coding and development began as a kid when I became fascinated with technology. I took computer courses in high school whenever possible to gain more understanding of both hardware and software aspects of computers.
+                        <br><br>
+                        In 2018, I became certified a full stack web developer from The University of Texas at Austin. I have built 50+ applications using my knowledge gained from the course including: JavaScript, HTML, CSS, Node.js, React, MongoDB, SQL and more.
+
                     </h5>
 
                 </div>
 
                 <!-- Row -->
-                <div id="hide-about-icons" class="row">
+                <!-- <div id="hide-about-icons" class="row">
 
-                    <!-- Col -->
+                
                     <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true"
                         class="col s4 center-align">
                         <div class="about-icons ">
@@ -179,7 +187,7 @@
                         </div>
                     </div>
 
-                    <!-- Col -->
+              
                     <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true" class="col s4 center-align">
                         <div class="about-icons">
                             <img class="responsive-img" src="assets/images/magnifying.svg" height="100" width="100">
@@ -187,7 +195,7 @@
                         </div>
                     </div>
 
-                    <!-- Col -->
+  
                     <div data-aos="fade-up-left" data-aos-delay="500" data-aos-duration="1000" data-aos-once="true"
                         class="col s4 center-align">
                         <div class="about-icons">
@@ -196,13 +204,13 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
                 <!-- Row -->
                 <div id="resume-button" class="row">
 
                     <div class="col s12 center-align">
-                        <a data-aos="zoom-out-up" data-aos-delay="650" data-aos-duration="1000" data-aos-once="true" id="resume-button-color"
+                        <a id="resume-button-color"
                             class="waves-effect waves-light btn-large" href="assets/resume/mason-vickery-resume.pdf"
                             target="_blank"><i class="material-icons left">mood</i>Resume</a>
                     </div>
@@ -259,16 +267,15 @@
                     </div>
 
                     <!-- ISOTOPE GRID -->
-                    <div class="row" data-aos="zoom-in" data-aos-delay="650" data-aos-duration="1000"
-                    data-aos-once="true">
+                    <div class="row" data-aos="zoom-in" data-aos-delay="650" data-aos-duration="1000" data-aos-once="true">
 
                         <!-- DO4U -->
                         <div class="grid">
                             <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/do4u.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/do4u.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -278,8 +285,10 @@
                                         <span class="card-title">DO4U<i class="material-icons right">close</i></span>
                                         <p class="project-info">React.js, MongoDB & User Authentication</p>
                                         <br>
-                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/do-4-u" target="_blank">GitHub</a>
-                                        <a class="project-link center-align col s6" href="https://do-4-u.herokuapp.com/" target="_blank">Deployed</a>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/do-4-u"
+                                            target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://do-4-u.herokuapp.com/"
+                                            target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
@@ -288,8 +297,8 @@
                             <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/focus.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/focus.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -299,8 +308,10 @@
                                         <span class="card-title">Focus!<i class="material-icons right">close</i></span>
                                         <p class="project-info">Handlebars.js, Express.js & User Authentication</p>
                                         <br>
-                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/Focus" target="_blank">GitHub</a>
-                                        <a class="project-link center-align col s6" href="https://limitless-basin-61713.herokuapp.com/" target="_blank">Deployed</a>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/Focus"
+                                            target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://limitless-basin-61713.herokuapp.com/"
+                                            target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
@@ -309,8 +320,8 @@
                             <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/restaurant.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/restaurant.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -320,8 +331,10 @@
                                         <span class="card-title">Restaurant Roulette<i class="material-icons right">close</i></span>
                                         <p class="project-info">JQuery, API & Responsive Design</p>
                                         <br>
-                                        <a class="project-link center-align col s6" href="https://github.com/wheresdylan/project_one" target="_blank">GitHub</a>
-                                        <a class="project-link center-align col s6" href="https://wheresdylan.github.io/project_one/" target="_blank">Deployed</a>
+                                        <a class="project-link center-align col s6" href="https://github.com/wheresdylan/project_one"
+                                            target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://wheresdylan.github.io/project_one/"
+                                            target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
@@ -330,8 +343,8 @@
                             <div class="col s12 m6 l4 element-item front-end" data-category="front-end">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/react-mario.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/react-mario.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -341,8 +354,10 @@
                                         <span class="card-title">Memory Game<i class="material-icons right">close</i></span>
                                         <p class="project-info">React.js & Bootstrap</p>
                                         <br>
-                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/React-Clicky-Game" target="_blank">GitHub</a>
-                                        <a class="project-link center-align col s6" href="https://mtvickery1.github.io/React-Clicky-Game/" target="_blank">Deployed</a>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/React-Clicky-Game"
+                                            target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://mtvickery1.github.io/React-Clicky-Game/"
+                                            target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
@@ -351,8 +366,8 @@
                             <div class="col s12 m6 l4 element-item full-stack" data-category="full-stack">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/burger.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/burger.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -362,8 +377,10 @@
                                         <span class="card-title">Eat Da Burger<i class="material-icons right">close</i></span>
                                         <p class="project-info">SQL, Handlebars.js & Express.js</p>
                                         <br>
-                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/burger" target="_blank">GitHub</a>
-                                        <a class="project-link center-align col s6" href="https://fast-hollows-29460.herokuapp.com/" target="_blank">Deployed</a>
+                                        <a class="project-link center-align col s6" href="https://github.com/mtvickery1/burger"
+                                            target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s6" href="https://fast-hollows-29460.herokuapp.com/"
+                                            target="_blank">Deployed</a>
                                     </div>
                                 </div>
                             </div>
@@ -372,8 +389,8 @@
                             <div class="col s12 m6 l4 element-item back-end" data-category="back-end">
                                 <div class="card">
                                     <div class="card-image waves-effect waves-block waves-light">
-                                        <img class="activator project-img" src="assets/images/bamazon.png"
-                                        height="200px" width="200px">
+                                        <img class="activator project-img" src="assets/images/bamazon.png" height="200px"
+                                            width="200px">
                                     </div>
                                     <!-- <div class="card-content">
                                             <span class="card-title activator project-img grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
@@ -383,7 +400,8 @@
                                         <span class="card-title">Bamazon<i class="material-icons right">close</i></span>
                                         <p class="project-info">Node.js & SQL</p>
                                         <br>
-                                        <a class="project-link center-align col s12" href="https://github.com/mtvickery1/bamazon" target="_blank">GitHub</a>
+                                        <a class="project-link center-align col s12" href="https://github.com/mtvickery1/bamazon"
+                                            target="_blank">GitHub</a>
                                         <!-- <a class="project-link center-align col s6" href="#" target="_blank">Deployed</a> -->
                                     </div>
                                 </div>
